--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   background-color: #F1F0E8;
   list-style: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .app-container {
@@ -26,6 +27,13 @@
 }
 
 .login-button {
+  color: #F1F0E8;
   background-color: #96B6C5;
+}
+
+.login-button:hover {
+  color: black;
+  border: 2px solid #96B6C5;
+  background-color: #F1F0E8;
 }
 
