--- a/src/Components/User/styling.css
+++ b/src/Components/User/styling.css
@@ -1,7 +1,6 @@
 .login-page {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr ;
-    border: 2px dotted black;
+    grid-template-rows: 1fr;
     margin: 100px 100px;
     place-content: center;
 }
@@ -45,14 +44,14 @@
     place-content: center;
 }
 
-.sign-up-form-container div {
+.sign-up-form-body {
     display: grid;
     grid-template-columns: 80px 1fr;
 }
 
-.form-box {
+.sign-up-form-box {
     display: grid;
-    grid-template-rows: 1fr;
+    gap: 1.5rem;
 }
 
 .sign-up-form {
@@ -66,6 +65,4 @@
     border-radius: 7px;
     height: 30px;
     width: 100px;
-    justify-items: center;
-    padding: 0.5rem;
 }
