landing page created, logout feature added

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
   background-color: #F1F0E8;
 }
 
+.addFilm-button {
+    padding: 1rem;
+    border: 1px solid #96B6C5;
+    border-radius: 60px;
+    background-color: #F1F0E8;
+}
+
+.addFilm-button:hover {
+  background-color: #96B6C5;
+}
