--- a/src/Components/UsersList/styling.css
+++ b/src/Components/UsersList/styling.css
@@ -1,3 +1,11 @@
+.lists-container {
+    padding: 1rem;
+}
+
+.new-list-container {
+    padding: 1rem;
+}
+
 .empty-list-item {
     height: 160px;
     width: 98%;
@@ -12,9 +20,13 @@
     
 }
 
-.list-title-container {
+.list-title-container, .addFilmToList-container {
     padding: 0.5rem;
     place-content: center;
+}
+
+.addFilmToList-container {
+    width: 100%;
 }
 
 .empty-list-list {
@@ -42,7 +54,6 @@
 }
 
 .new-list-container > .empty-list-item {
-    margin-left: 2.5rem;
     width: 94.5%;
     display: grid;
     grid-template-rows: 2rem;
@@ -58,11 +69,15 @@
     border: 1px dotted #96B6C5;
 }
 
-.listTitle-input {
+.listTitle-input, .search-films-searchbar {
     border: none;
     outline: none;
     border-bottom: 1px solid #96B6C5;
-    width: 50%;
+    width: 100%;
     height: 20px;
     font-size: medium;
+}
+
+.search-films-searchbar {
+    width: 100%;
 }
