--- a/src/styling/FilmPage.css
+++ b/src/styling/FilmPage.css
@@ -96,7 +96,7 @@
     margin: 2.5rem;
 }
 
-.poster {
+.feed-card-poster {
     width: 133px;
 }
 
@@ -148,4 +148,26 @@
 
 #back{
     margin: 2rem 0 0 2rem;
+}
+
+.poster-container {
+    position: relative;
+    height: 80px;
+    width: 60px;
+}
+
+.add-to-list-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 80px;
+    width: 60px;
+    background-color: rgba(24, 100, 171, 0.1);
+    text-align: center;
+    padding: 0;
+}
+
+.add-button {
+    background-color: rgba(24, 100, 171, 0);
 }
