--- a/src/styling/FilmPage.css
+++ b/src/styling/FilmPage.css
@@ -150,10 +150,10 @@
     margin: 2rem 0 0 2rem;
 }
 
-.poster-container {
+.add-to-list-container {
     position: relative;
-    height: 80px;
-    width: 60px;
+    height: 100px;
+    width: 456px;
 }
 
 .add-to-list-button {
@@ -161,13 +161,15 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 80px;
-    width: 60px;
-    background-color: rgba(24, 100, 171, 0.1);
-    text-align: center;
+    height: 100px;
+    width: 456px;
+    background-color: rgba(24, 100, 171, 0);
+    text-align: end;
     padding: 0;
 }
 
-.add-button {
-    background-color: rgba(24, 100, 171, 0);
+.add-to-list-button:hover {
+    border: none;
+    border-bottom: 4px solid #96B6C5;
+    border-radius: 0;
 }
