--- a/src/styling/dashboard.css
+++ b/src/styling/dashboard.css
@@ -35,6 +35,8 @@
 }
 
 .logo-container {
+    display: flex;
+    gap: 1rem;
     place-self: center start;
     margin-left: 1rem;
 }
@@ -44,10 +46,15 @@
     background-color: #96B6C5;
 }
 
-.link {
+.logo-container > .link {
+    background-color: #96B6C5;
     text-decoration: none;
 }
 
 .left-sidebar .link {
+    background-color: #96B6C5;
+}
+
+#user-icon {
     background-color: #96B6C5;
 }
