--- a/src/Components/UsersList/styling.css
+++ b/src/Components/UsersList/styling.css
@@ -103,3 +103,40 @@
 .newlist-films-list {
     padding: 0 0.5rem 0 1rem;
 }
+
+.list-list {
+    margin: 0;
+    padding: 1rem;
+}
+
+.list-image-container {
+    height: 8.7rem;
+    width: 100%;
+    display: flex;
+    padding: 0;
+}
+
+.empty-image-container {
+    border: 1px solid #96B6C5;
+    height: 8.7rem;
+    width: 8rem;
+}
+
+.users-list-item {
+    display: grid;
+    grid-template-rows: 2rem;
+    border: 1px solid #96B6C5;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.users-list-item div {
+    text-align: start;
+    padding: 0.5rem;
+}
+
+.list-image {
+    width: 6rem;
+    height: 8.2rem;
+}
