--- a/src/App.css
+++ b/src/App.css
@@ -43,12 +43,19 @@
 }
 
 .addFilm-button {
-    padding: 1rem;
-    border: 1px solid #96B6C5;
-    border-radius: 60px;
-    background-color: #F1F0E8;
+  position: fixed;
+  top: 85%;
+  right: 5%;
+  padding: 1rem;
+  border: 1px solid #96B6C5;
+  border-radius: 60px;
+  background-color: #F1F0E8;
 }
 
 .addFilm-button:hover {
-  background-color: #96B6C5;
+  border: 3px solid #96B6C5;
+}
+
+.add-button:hover {
+  fill: #96B6C5;
 }
