styling updated on feed page, third party api requests updated on feed component

--- a/src/Components/Search/styling.css
+++ b/src/Components/Search/styling.css
@@ -35,9 +35,8 @@
 }
 
 .searchbar-results-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     height: fit-content;
+    width: 50%;
 }
 
 .newlist-films-list {
