--- a/src/styling/dashboard.css
+++ b/src/styling/dashboard.css
@@ -25,13 +25,18 @@
     grid-area: footer;
 }
 
-.search-bar-container, .logo-container {
+.search-bar-container-dashboard, .logo-container, .search-bar-icon-container {
     background-color: #96B6C5;
 }
 
-.search-bar-container {
+.search-bar-icon-container {
+    text-align: end;
+}
+
+.search-bar-container-dashboard {
     place-self: center end;
     margin-right: 1rem;
+    width: 100%;
 }
 
 .logo-container {
@@ -57,4 +62,26 @@
 
 #user-icon {
     background-color: #96B6C5;
+}
+
+.search-bar-container-dashboard > .searchbar-results-container > .searchbar-container {
+    background-color: #96B6C5;
+    border-bottom: 1px solid #F1F0E8;
+}
+
+.search-bar-container-dashboard > .searchbar-results-container > .searchbar-container > .search-films-searchbar {
+    background-color: #96B6C5;
+    color: #F1F0E8;
+}
+
+.search-bar-container-dashboard > .searchbar-results-container > .searchbar-container > .search-films-searchbar::placeholder {
+    color: #F1F0E8;
+}
+
+.search-bar-container-dashboard > .searchbar-results-container > .searchbar-container > #searchFilm-icon {
+    background-color: #96B6C5;
+}
+
+.search-bar-container-dashboard > .searchbar-results-container {
+    width: 100%;
 }
