--- a/src/styling/feed.css
+++ b/src/styling/feed.css
@@ -2,13 +2,20 @@
     grid-area: main;
     background-color: #F1F0E8;
     margin: 0.5rem;
+    width: 100vw;
+    display: grid;
+    gap: 2rem;
+}
+
+.feed-list-container {
+    display: grid;
+    grid-template-rows: 3rem 2fr;
 }
 
 .film-list {
     display: flex;
     gap: 0.9rem;
-    margin-left: -3.4%;
-    margin-top: 2.5rem;
+    padding: 0;
     background-color: #F1F0E8;
 }
 
@@ -16,7 +23,7 @@
     height: 200px;
 }
 
-.upcoming-list-container, .popular-list-container, .cinema-list-container, .film-list-container {
+.trending-list-container, .popular-list-container, .cinema-list-container, .film-list-container {
     width: 100vw;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -24,7 +31,7 @@
     scrollbar-width: none;
 }
 
-.upcoming-list-container::-webkit-scrollbar, .popular-list-container::-webkit-scrollbar, .cinema-list-container::-webkit-scrollbar {
+.trending-list-container::-webkit-scrollbar, .popular-list-container::-webkit-scrollbar, .cinema-list-container::-webkit-scrollbar {
     display: none;
 }
 
@@ -35,4 +42,3 @@
 .link{
     text-decoration: none;
 }
-
