--- a/src/styling/FilmPage.css
+++ b/src/styling/FilmPage.css
@@ -1,7 +1,3 @@
-.film-page-container {
-    width: fit-content;
-}
-
 .film-page-header {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -14,12 +10,18 @@
     display: grid;
 }
 
-.crew-box{
+.director-writer-box{
     display: flex;
-    gap: 5rem;
-    place-content: center;
+    gap: 3rem;
+    justify-content: center;
     width: fit-content;
     padding: 1rem;
+    text-align: center;
+}
+
+.director-writer-box section {
+    place-content: center;
+    height: fit-content;
 }
 
 .poster-title-box {
@@ -76,7 +78,7 @@
     gap: 10rem;
     place-content: center;
     margin-top: 2.5rem;
-    width: 100%;
+    width: 100vw;
 }
 
 .images-box, .videos-box {
@@ -93,29 +95,31 @@
     border-bottom: 5px solid #FF5733;
 }
 
-.cast-crew-box {
+.cast-box, .crew-box {
     width: 100vw;
+}
+
+.cast-list::-webkit-scrollbar, .crew-list::-webkit-scrollbar {
+    display: none;
+}
+
+.cast_crew-container {
+    width: 100vw;
+}
+
+.cast-list, .crew-list {
     overflow-x: scroll;
     overflow-y: hidden;
     -ms-overflow-style: none;
     scrollbar-width: none;
-}
-
-.cast-crew-box::-webkit-scrollbar {
-    display: none;
-}
-
-.cast-list, .crew-list {
+    margin: 0;
     display: flex;
-    gap: 3rem;
-    padding: 5rem 2.5rem;
+    gap: 2rem;
+    padding: 0;
     height: fit-content;
+    margin: 0;
 }
 
-.heading {
-    position: absolute;
-    margin: 2.5rem;
-}
 
 .feed-card-poster {
     width: 133px;
@@ -125,12 +129,15 @@
     border-radius: 50px;
     height: 138px;
     width: 92px;
+    text-align: center;
+    margin: 0;
 }
 
 #unknown-profile-image, #unknown-poster {
     border: 1px solid #96B6C5;
     background-color: #ADC4CE;
     place-content: center;
+    margin: 0;
 }
 
 .link {
