--- a/src/styling/dashboard.css
+++ b/src/styling/dashboard.css
@@ -15,12 +15,18 @@
     background-color: #96B6C5;
     margin: 0.5rem;
     border-radius: 20px;
+}
+
+.sidebar-nav {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 1%;
+    left: 0;
     display: grid;
     grid-template-rows: 5rem 5rem 5rem 5rem 5rem;
     padding: 1rem;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
+    background-color: #96B6C5;
+    border-radius: 20px;
 }
 
 .left-sidebar h2 {
