updated watchlist, a user can view all films added to the watchlist, when hovering over the films it displays the ratings given for each film

--- a/src/Components/Diary/styling.css
+++ b/src/Components/Diary/styling.css
@@ -41,6 +41,11 @@
 .diary-list-item {
     display: flex;
     gap: 1rem;
+    cursor: pointer;
+}
+
+.diary-list-item > .list-image {
+    cursor: pointer;
 }
 
 .diary-list-titleRating {
