--- a/src/Components/UsersList/styling.css
+++ b/src/Components/UsersList/styling.css
@@ -24,6 +24,29 @@
     place-content: center;
 }
 
+.list-page-heading-box {
+    text-align: center;
+    border-top: 3px solid #FF5733;
+    border-bottom: 3px solid #FF5733;
+    padding: 1rem;
+    position: sticky;
+    top: 15%;
+    margin-right: 1rem;
+}
+
+.add-to-list-btn-box {
+    text-align: center;
+}
+
+.add-to-list-btn-box > .icon {
+    width: 50px;
+    height: 50px;
+}
+
+.list-title-box {
+    text-align: center;
+}
+
 .addFilmToList-container {
     width: 50%;
 }
@@ -175,4 +198,9 @@
 .list-page-list-item {
     cursor: pointer;
     position: relative;
+}
+
+
+.list-page-main {
+    text-align: center;
 }
