styling updated to ensure the app fills the vw and vh on every page

--- a/src/Components/Search/styling.css
+++ b/src/Components/Search/styling.css
@@ -23,6 +23,7 @@
     display: flex;
     height: 100px;
     border-bottom: 1px solid #FF5733;
+    padding: 0.5rem;
 }
 
 .search-result-poster, .new-film-poster {
@@ -41,4 +42,5 @@
 
 .newlist-films-list {
     padding-top: 1rem;
+    width: 100%;
 }
