--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,12 @@
 .app-container {
   display: grid;
   grid-template: 
-  'left header' 5rem
+  'left header' 0.4fr
   'left main' 1fr
-  'left footer' 5rem/
-  20rem 1fr;
-  max-width: 100vw;
-  height: 100%;
+  'left footer' 1fr/
+  20rem 2fr;
+  width: 100vw;
+  height: 100vh;
 }
 
 .icon {
