--- a/src/styling/dashboard.css
+++ b/src/styling/dashboard.css
@@ -23,8 +23,9 @@
 }
 
 .sidebar-nav {
-    display: grid;
-    grid-template-rows: 5rem 5rem 5rem 5rem 5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     padding: 1rem;
     background-color: #96B6C5;
     border-radius: 20px;
@@ -124,4 +125,47 @@
 .search-results-list-dashboard {
     padding: 1rem;
     background-color: #FF5733;
+}
+
+.nav-bar-list-container {
+    display: flex;
+    flex-direction: row;
+    background-color: #96B6C5;
+    gap: 1fr;
+}
+
+.nav-bar-list-container > .icon {
+    width: 40px;
+    height: 40px;
+    background-color: #96B6C5;
+    place-self: center;
+}
+
+.logout-btn, .logo-btn {
+    background-color: #96B6C5;
+    padding: 0;
+}
+
+.logo-btn:hover {
+    outline: none;
+    border: none;
+    padding: none;
+}
+
+.logout-btn > .icon, .logo-text-box > .icon {
+    background-color: #96B6C5;
+    width: 34px;
+    height: 38px;
+}
+
+.logo-text-box {
+    display: flex;
+    flex-direction: row;
+    background-color: #96B6C5;
+    align-items: center;
+}
+
+.header-title {
+    background-color: #96B6C5;
+    color: #213547;
 }
