--- a/src/styling/dashboard.css
+++ b/src/styling/dashboard.css
@@ -132,6 +132,11 @@
     flex-direction: row;
     background-color: #96B6C5;
     gap: 1fr;
+    cursor: pointer;
+}
+
+.nav-bar-list-container:hover h2 {
+    color: #FF5733;
 }
 
 .nav-bar-list-container > .icon {
