profile image updated to accept files

--- a/src/Components/Profile/styling.css
+++ b/src/Components/Profile/styling.css
@@ -221,3 +221,7 @@
 .add-to-favourite-list-item .search-result-list-item .search-result-title-container p {
     text-align: start;
 }
+
+.profile-photo-form {
+    background-color: #96B6C5;
+}
