link added to writer/director on film page

--- a/src/styling/FilmPage.css
+++ b/src/styling/FilmPage.css
@@ -97,6 +97,7 @@
 
 .cast-box, .crew-box {
     width: 100vw;
+    padding-bottom: 1rem;
 }
 
 .cast-list::-webkit-scrollbar, .crew-list::-webkit-scrollbar, .similar-films-list::-webkit-scrollbar {
