bug fix: new diary entries were rendering beneath previous months, now fixed to render above

--- a/src/Components/Diary/styling.css
+++ b/src/Components/Diary/styling.css
@@ -10,8 +10,7 @@
 }
 
 .monthly-diary-container {
-    border-bottom: 1px solid #96B6C5;
-    padding: 1rem;
+    padding: 0 1rem 0 1rem;
 }
 
 .month-title-box {
