--- a/src/styling/FilmPage.css
+++ b/src/styling/FilmPage.css
@@ -5,6 +5,13 @@
     width: fit-content;
 }
 
+.film-page-container {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    overflow-x: auto;
+}
+
 
 .poster-title-box{
     display: grid;
@@ -95,8 +102,8 @@
     border-bottom: 5px solid #FF5733;
 }
 
-.cast-box, .crew-box {
-    width: 100vw;
+.cast-box, .crew-box, .similar-list-box {
+    max-width: 100vw;
     padding-bottom: 1rem;
 }
 
@@ -105,18 +112,19 @@
 }
 
 .cast_crew-container, .similar-list-container {
-    max-width: 100vw;
     margin-right: 0;
     padding: 0;
+    overflow: hidden;
+    max-width: 100%;
 }
 
 
 .cast-list, .crew-list, .similar-films-list {
-    overflow-x: scroll;
+    margin: 0;
+    overflow-x: auto;
     overflow-y: hidden;
     -ms-overflow-style: none;
     scrollbar-width: none;
-    margin: 0;
     display: flex;
     gap: 2rem;
     padding: 0;
