--- a/src/styling/FilmPage.css
+++ b/src/styling/FilmPage.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     overflow-x: auto;
+    padding: 0.5rem;
 }
 
 
@@ -222,6 +223,8 @@
 
 .user-rating-stars-review-section .star {
     width: 10px;
+    height: fit-content;
+    fill: #FF5733;
 }
 
 .avg-user-rating-box {
@@ -246,10 +249,21 @@
     border-bottom: 2rem solid #FF5733;
 }
 
+.reviews-container {
+    max-width: 430px;
+    padding-bottom: 1rem;
+}
+
+.reviews-container > ul {
+    padding: 0;
+}
+
 .review-list-item {
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid #96B6C5;
+    width: 100%;
+    padding-bottom: 0.25rem;
 }
 
 .review-header-box {
@@ -259,4 +273,23 @@
 
 .review-profile-pic {
     width: 30px;
+}
+
+.username-rating-box {
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    width: 100%;
+}
+
+.username-box {
+    place-self: center;
+}
+
+.users-rating-box {
+    place-self: end;
+}
+
+.empty-review-list-item {
+    padding: 1rem;
 }
